# DrishtiChokepointAgent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  viewer.py
data/geometry/: example_stadium_exit.json
results/: REPRODUCIBILITY.md  timeline.csv
results/latex_tables/: ablation_summary.tex  backend_comparison.tex  baseline_comparison.tex  metrics_summary.tex  system_overview.tex
results/plots/: ablation_summary.csv  ablation_timeline.csv  adversarial_summary.csv  baseline_comparison.csv  timeline.csv
scripts/: ablation_hysteresis.py  adversarial_scenarios.py  baselines.py  benchmark_backends.py  compare_baselines.py  evaluate.py  final_validation.py  generate_latex_tables.py  generate_manifest.py  plot_data.py  run_all_evaluations.py  test_integration.py  validate_pipeline.py
src/drishti_agent/: __init__.py  config.py  main.py
src/drishti_agent/agent/: __init__.py  graph.py  nodes.py  transitions.py
src/drishti_agent/flow/: __init__.py  metrics.py  optical_flow.py
src/drishti_agent/geometry/: __init__.py  loader.py  regions.py
src/drishti_agent/models/: __init__.py  density.py  flow.py  geometry.py  input.py  output.py  reason_codes.py  state.py
src/drishti_agent/observability/: __init__.py  analytics.py  visualization.py
src/drishti_agent/perception/: __init__.py  engine.py  occupancy.py  vision_engine.py  yolo_engine.py
src/drishti_agent/signals/: __init__.py  density_processor.py  flow_processor.py
src/drishti_agent/stream/: __init__.py  buffer.py  client.py  consumer.py  frame.py  image_decoder.py
tests/: conftest.py  test_adversarial_scenarios.py  test_density_processor.py  test_flow_metrics.py  test_flow_processor.py  test_hysteresis_ablation.py  test_perception_engines.py  test_placeholder.py  test_transitions.py
ui/: app.py
