# DrishtiChokepointAgent Project Configuration
# =============================================
# Modern Python project configuration using pyproject.toml

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drishti-chokepoint-agent"
version = "0.1.0"
description = "Physics-grounded crowd safety reasoning agent for chokepoint-aware risk assessment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Drishti Project"}
]
keywords = [
    "crowd-safety",
    "agent",
    "langgraph",
    "optical-flow",
    "research",
    "real-time",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # Computer vision
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    
    # Agent framework (deterministic state machine)
    "langgraph>=0.0.40",
    
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
google = [
    # Google Cloud Vision for production perception
    "google-cloud-vision>=3.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/drishti-project/drishti-chokepoint-agent"
Documentation = "https://github.com/drishti-project/drishti-chokepoint-agent#readme"
Repository = "https://github.com/drishti-project/drishti-chokepoint-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
